# oipres

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Presentation.cpp  Presentation.h  QListConstPointerIterator.h  ScreenSwitch.cpp  ScreenSwitch.h  WritePresentation.cpp  WritePresentation.h  main.cpp  main.h  resources.qrc
src/Editor/: Editor.cpp  Editor.h  OptionsEditor.cpp  OptionsEditor.h  TabsEditor.cpp  TabsEditor.h  TaskEditor.cpp  TaskEditor.h
src/Parser/: OptionsReader.cpp  OptionsReader.h  ResultsReader.cpp  ResultsReader.h  TasksReader.cpp  TasksReader.h  XmlReader.cpp  XmlReader.h
src/Report/: Contestant.cpp  Contestant.h  Report.cpp  Report.h  Task.cpp  Task.h  TaskResult.cpp  TaskResult.h  Test.cpp  Test.h  TestGroup.cpp  TestGroup.h  TestGroupResult.cpp  TestGroupResult.h  TestResult.cpp  TestResult.h  Tests.cpp  Tests.h  TestsResult.cpp  TestsResult.h  TimeInt.cpp  TimeInt.h
src/Sort/: SortReports.cpp  SortReports.h  SortingFunctions.cpp  SortingFunctions.h
src/View/: View.cpp  View.h  ViewComments.cpp  ViewComments.h  ViewFrame.cpp  ViewFrame.h  ViewGroupPoints.cpp  ViewGroupPoints.h  ViewTable.cpp  ViewTable.h  ViewTest.cpp  ViewTest.h  ViewTestGroup.cpp  ViewTestGroup.h
src/View/SmallViews/: ViewTaskResult.cpp  ViewTaskResult.h  ViewTestName.cpp  ViewTestName.h  ViewTestStatus.cpp  ViewTestStatus.h  ViewTestTime.cpp  ViewTestTime.h
